[gd_scene load_steps=19 format=3 uid="uid://4jdyfgk4hat3"]

[ext_resource type="Texture2D" uid="uid://mskm1da6of80" path="res://art/units/elf-1.png" id="2_5fxtv"]
[ext_resource type="AudioStream" uid="uid://iq7upcd255r4" path="res://audio/LeatherParchment_Grab_01.ogg" id="2_rfgnc"]
[ext_resource type="Script" path="res://components/XMergeComponents/draggable_sprite.gd" id="2_yb30x"]
[ext_resource type="AudioStream" uid="uid://oe5eitk8u57b" path="res://audio/LeatherParchment_Grab_02.ogg" id="3_s60y2"]
[ext_resource type="AudioStream" uid="uid://bui16gribgg8c" path="res://audio/LeatherParchment_Grab_03.ogg" id="4_rp6vl"]
[ext_resource type="AudioStream" uid="uid://b38cnx4cgy1o2" path="res://audio/Dice_01.ogg" id="6_2fk4y"]
[ext_resource type="AudioStream" uid="uid://crq7smr0dpnel" path="res://audio/MagicClick.ogg" id="6_em7nv"]
[ext_resource type="AudioStream" uid="uid://dxpvs1iimi2fy" path="res://audio/Dice_02.ogg" id="7_40xqb"]
[ext_resource type="AudioStream" uid="uid://bjjk4nn8m8a2y" path="res://audio/Gem_Grab_01.ogg" id="8_irpp8"]
[ext_resource type="AudioStream" uid="uid://dg7j1jt2tcitk" path="res://audio/Dice_03.ogg" id="8_nvhnp"]
[ext_resource type="AudioStream" uid="uid://cryacle32jqt3" path="res://audio/Gem_Grab_02.ogg" id="9_eu4l5"]
[ext_resource type="AudioStream" uid="uid://cymvfrmdcgcen" path="res://audio/Gem_Grab_03.ogg" id="10_bbj78"]
[ext_resource type="AudioStream" uid="uid://b7nrc1b4kvq5h" path="res://audio/Gem_Grab_04.ogg" id="11_tseg1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tf2eu"]
radius = 19.0
height = 58.0

[sub_resource type="Curve" id="Curve_gf5ng"]
min_value = -1.0
_data = [Vector2(0, -1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mf150"]
random_pitch = 1.3
streams_count = 3
stream_0/stream = ExtResource("2_rfgnc")
stream_1/stream = ExtResource("3_s60y2")
stream_2/stream = ExtResource("4_rp6vl")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_iqjca"]
random_pitch = 1.2
streams_count = 3
stream_0/stream = ExtResource("6_2fk4y")
stream_1/stream = ExtResource("7_40xqb")
stream_2/stream = ExtResource("8_nvhnp")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_afvvc"]
streams_count = 5
stream_0/stream = ExtResource("6_em7nv")
stream_1/stream = ExtResource("8_irpp8")
stream_2/stream = ExtResource("9_eu4l5")
stream_3/stream = ExtResource("10_bbj78")
stream_4/stream = ExtResource("11_tseg1")

[node name="Area2D" type="Area2D"]
script = ExtResource("2_yb30x")

[node name="DraggableSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_5fxtv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_tf2eu")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.5
speed_scale = 1.5
randomness = 0.5
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 8.65
gravity = Vector2(0, -100)
linear_accel_min = 1.0
linear_accel_max = 10.0
radial_accel_min = -5.0
radial_accel_max = 10.0
scale_amount_max = 2.0
color = Color(0.85133, 0.820855, 1, 1)
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_gf5ng")

[node name="GrabSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_mf150")
volume_db = -10.0

[node name="DropSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_iqjca")
volume_db = -10.0

[node name="MergeSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_afvvc")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
